# episcope

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  README.md  makefile  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: test_and_release.yml
examples/: test_io.py  test_viz.py
spec/: 1.1.md  1.2.md  current.md  data.md  least_processing.md
src/episcope/app/: __main__.py  core.py  state.py
src/episcope/io/: data_source.py  directory_provider.py  display.py  interpolation_filter.py  visualization.py
tests/: test_io.py  test_viz.py
